# Aeris

./: CMakeLists.txt  run-debug.sh  run.sh
shell/: pubspec.yaml
shell/lib/: main.dart
shell/linux/: CMakeLists.txt
shell/linux/runner/: my_application.cc
src/: main.cpp
